--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -31,7 +31,7 @@
 	function matchPassword(){
 		v x=document.getElementById("password").value.length;
 		if(x<6||x>18){
-			alert(密码长度不符。请输入6-18位密码);
+			alert("密码长度不符。请输入6-18位密码");
 		}
 	}
 </script>
