--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -26,12 +26,21 @@
 		var reg = /^(?!_)(?!.*?_$)[a-zA-Z0-9_\u4e00-\u9fa5]+$/;
 		if(!reg.test(document.getElementById("name").value)){
 			alert("账户包含非法字符。支持中文、英文、数字、“_”");
+			return false;
 		}
+		else{
+			return true;
+		}
+		
 	}
 	function matchPassword(){
 		v x=document.getElementById("password").value.length;
 		if(x<6||x>18){
 			alert("密码长度不符。请输入6-18位密码");
+			return false;
+		}
+		else{
+			return true;
 		}
 	}
 </script>
