--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -13,11 +13,15 @@
 		<td>
 		<p align="center"><b><font size="7">LOGO</font></b></td>
 		<td width="483">&nbsp;&nbsp;&nbsp;&nbsp;
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; 账号： <input id="name" type="text" name="T2" size="20"></p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; 密码： <input id="password" type="text" name="T1" size="20">&nbsp;&nbsp;
-		</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; <font size="6">&nbsp;&nbsp; </font>（用户登录界面）&nbsp;&nbsp; 
-		（CSS、JS交互）</td>
+		
+		<form name='test' action=? method='POST'>
+		<p>action: <input type='text' name='action' /></p>
+		<p>username: <input type='text' name='Name' /></p>
+		<p>password: <input type='text' name='SysID' /></p>
+		<p><input type='submit' name='submit' /></p>
+		</form>
+		（CSS、JS交互）
+		</td>
 	</tr>
 </table>
 
