--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -16,8 +16,8 @@
 		
 		<form name='test' action=? method='POST'>
 		<p>action: <input type='text' name='action' /></p>
-		<p>username: <input type='text' name='Name' /></p>
-		<p>password: <input type='text' name='SysID' /></p>
+		<p>username: <input id = "Name" type='text' name='Name' /></p>
+		<p>password: <input id="password" type='text' name='SysID' /></p>
 		<p><input type='submit' name='submit' /></p>
 		</form>
 		（CSS、JS交互）
@@ -28,7 +28,7 @@
 <script>
 	function matchName(){
 		var reg = /^(?!_)(?!.*?_$)[a-zA-Z0-9_\u4e00-\u9fa5]+$/;
-		if(!reg.test(document.getElementById("name").value)){
+		if(!reg.test(document.getElementById("Name").value)){
 			alert("账户包含非法字符。支持中文、英文、数字、“_”");
 			return false;
 		}
