--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -14,7 +14,7 @@
 		<p align="center"><b><font size="7">LOGO</font></b></td>
 		<td width="483">&nbsp;&nbsp;&nbsp;&nbsp;
 		
-		<form name='test' action=? method='POST'>
+		<form name='test' action=? method='POST' onsubmit='matchName' onsubmit='matchPassword'>
 		<p>action: <input type='text' name='action' /></p>
 		<p>username: <input id = "Name" type='text' name='Name' /></p>
 		<p>password: <input id="Code" type='text' name='Code' /></p>
