--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -17,7 +17,7 @@
 		<form name='test' action=? method='POST' onsubmit='matchName();' onsubmit='matchPassword();'>
 		<p>action: <input type='text' name='action' /></p>
 		<p>username: <input id = "Name" type='text' name='Name' /></p>
-		<p>password: <input id="Code" type='text' name='Code' /></p>
+		<p>password: <input id="Code" type='password' name='Code' /></p>
 		<p><input type='submit' name='submit' /></p>
 		</form>
 		（CSS、JS交互）
