--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -11,12 +11,19 @@
 <table border="1" width="100%" id="table1" height="151">
 	<tr>
 		<td>
+		<?php if($_SESSION['SysID']=='') ?>
 		<p align="center"><b><font size="7">LOGO</font></b></td>
 		<td width="483">&nbsp;&nbsp;&nbsp;&nbsp;
 		<p>&nbsp;&nbsp;&nbsp;&nbsp; 账号： <input type="text" name="T2" size="20"></p>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp; 密码： <input type="text" name="T1" size="20">&nbsp;&nbsp;
 		</p>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp; <font size="6">&nbsp;&nbsp; </font>（用户登录界面）&nbsp;&nbsp; 
-		（CSS、JS交互）</td>
+		（CSS、JS交互）
+		<?php else
+		{
+			echo $_SESSION['Name'];
+		}
+		?>		
+		</td>
 	</tr>
 </table>
