--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -1,4 +1,4 @@
-?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <!--meta http-equiv="X-UA-Compatible" content="IE=7" />-->
@@ -13,19 +13,14 @@
 		<td>
 		<p align="center"><b><font size="7">LOGO</font></b></td>
 		<td width="483">&nbsp;&nbsp;&nbsp;&nbsp;
-		<?php if($_SESSION['SysID']=='') ?>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; 账号： <input type="text" name="T2" size="20"></p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; 密码： <input type="text" name="T1" size="20">&nbsp;&nbsp;
-		</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; <font size="6">&nbsp;&nbsp; </font>（用户登录界面）&nbsp;&nbsp; 
-		（CSS、JS交互）
-		<form name='test' action='?' method='POST' onsubmit='matchName();matchPassword();'>
-		<p>username: <input id ="Name" type='text' name='Name' /></p>
-		<p>password: <input id="Code" type='password' name='Code' /></p>
+		<?php if($_SESSION['SysID']=='') {?>
+		<form name='test' action='?' method='POST' onsubmit='return matchName();'>
+		<p>用户名: <input id ="Name" type='text' name='Name' /></p>
+		<p>密码: <input id="Code" type='password' name='Code' /></p>
 		<input id='action' type='hidden' name='action' value='login' />
-		<p><input type='submit' name='submit' /></p>
+		<p><input type='submit' name='submit' value='登录' /></p>
 		</form>
-		<?php else
+		<?php } else
 		{
 			echo $_SESSION['Name'].'已经登录。';
 		?>
@@ -48,7 +43,7 @@
 			return false;
 		}
 		else{
-			return true;
+			return matchPassword();
 		}
 		
 	}
