--- a/网页样式/GeneralUI.css
+++ b/网页样式/GeneralUI.css
@@ -1,6 +1,14 @@
 
 
 /*通用UI*/
+
+li {
+    list-style-type:none;
+}
+
+
+
+
 div.pre-blank-field {
     background-color:white;
 	height:10px;
@@ -21,7 +29,15 @@ div.login-field {
 }
 
 
+div.information-field {
+    height:70px;
+	width:100%;
+}
 
+
+img.logo-pic {
+    height:250px;
+}
 
 
 
