--- a/src/include/template/hot.html
+++ b/src/include/template/hot.html
@@ -1,10 +1,12 @@
-<table border="1" width="100%" id="table7" height="157">
-	<tr>
-		<td height="40">&nbsp; 热门帖</td>
-	</tr>
-	<tr>
-		<td>&nbsp;&nbsp;&nbsp; XXXX&nbsp;&nbsp;&nbsp;
-		<p>&nbsp;&nbsp;&nbsp; XXXX </p>
-		<p>&nbsp;&nbsp;&nbsp; XXXX(与JS交互)</td>
-	</tr>
-</table>
+<div class="hot-post-field">
+	
+	<ul height="40">
+	    <p>热门帖</p>
+	    <li>XXXX</li>
+		<br/>
+	    <li>XXXX</li>
+		<br/>
+	</ul>
+</div>
+
+<br/>
