--- a/src/include/template/official.html
+++ b/src/include/template/official.html
@@ -1,9 +1,7 @@
-<table border="1" width="100%" id="table6" height="157">
-	<tr>
-		<td height="40">&nbsp; 官方动态</td>
-	</tr>
-	<tr>
-		<td>&nbsp;&nbsp;&nbsp;&nbsp; 用户须知&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-		重要通告&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 团队日志 （文字带超链接）</td>
-	</tr>
-</table>
+<div class="development-field">
+	
+	<p height="40">官方动态</p>
+	<pre>     用户须知     重要通告     团队日志 （文字带超链接）</pre>
+</div>
+
+<br/>
