--- a/src/include/template/footer.html
+++ b/src/include/template/footer.html
@@ -1,9 +1,7 @@
-<table border="1" width="100%" id="table9" height="62">
-	<tr>
-		<td>
-		<p align="center">网页基本信息</td>
-	</tr>
-</table>
+<div class="information-field">
+	<p align="center">网页基本信息</p>
+	
+</div>
 
 </body>
 
