--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -1,17 +1,16 @@
-<table border="1" width="100%" id="table8" height="157">
-	<tr>
-		<td height="40">&nbsp; 交流与讨论</td>
-	</tr>
-	<tr>
-		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-		</p>
-		<p>&nbsp;&nbsp;&nbsp; 【装饰图案】&nbsp; XXXX</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;【装饰图案】&nbsp; XXXX&nbsp;&nbsp;&nbsp;&nbsp; （按主题分类）</p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; …………</p>
-		<p>&nbsp;</p>
-		</td>
-	</tr>
-</table>
+<div class="total-post-field">
+	
+	<p height="40">&nbsp; 交流与讨论</p>
+	
+	<ul>
+		<li>【装饰图案】XXXX</li>
+		<br/>
+		<li>【装饰图案】XXXX（按主题分类）</li>
+		<br/>
+		<li>…………</li>
+		<br/>
+		<br/>
+		<br/>
+	</ul>
+</div>
+<br/>
