添加贴子列表页的登录信息检查 <img />是自闭合标签，不需要</img>

--- a/src/include/template/GeneralUI.css
+++ b/src/include/template/GeneralUI.css
@@ -28,6 +28,38 @@ div.login-field {
 	float:right;
 }
 
+#Name {
+    width:50%;
+	position:relative;
+}
+#Code {
+    width:50%;
+	position:relative;
+	
+}
+
+.login-name-field {
+    position:relative;
+	font-family:sans-serif;
+}
+
+.login-password-field {
+    position:relative;
+	font-family:sans-serif;
+}
+
+.login-button {
+    position:relative;
+}
+
+.logout-button {
+    position:relative;
+}
+
+
+
+
+
 
 div.information-field {
     height:70px;
