--- a/src/include/template/hot.html
+++ b/src/include/template/hot.html
@@ -2,9 +2,11 @@
 	
 	<ul height="40">
 	    <p>热门帖</p>
-	    <li>XXXX</li>
-		<br/>
-	    <li>XXXX</li>
+
+	    <form name = 'test' action = '?' method = 'POST' >
+		<input id = 'action' type = 'hidden' name = 'action' value = 'show' />
+		<input id = 'num' type = 'text' name = 'num' />
+		<pre><input type = 'submit' name = 'submit' value = 'show' /><pre>	
 		<br/>
 	</ul>
 </div>
