增加了登陆键和登出键的图片

--- a/网页样式/GeneralUI.css
+++ b/网页样式/GeneralUI.css
@@ -64,11 +64,15 @@ div.login-field {
 
 
 .login-button {
+    height:40px;
     position:relative;
+	top:10px;
 }
 
 .logout-button {
+    height:40px;
     position:relative;
+	top:10px;
 }
 
 
