--- a/src/include/template/hot.html
+++ b/src/include/template/hot.html
@@ -1,14 +1,17 @@
+
+
+
 <div class="hot-post-field">
 	
 	<ul height="40">
 	    <p>热门帖</p>
-
-	    <form name = 'test' action = '?' method = 'POST' >
-		<input id = 'action' type = 'hidden' name = 'action' value = 'show' />
-		<input id = 'num' type = 'text' name = 'num' />
-		<pre><input type = 'submit' name = 'submit' value = 'show' /><pre>	
+	    <li>XXXX</li>
+		<br/>
+	    <li>XXXX</li>
 		<br/>
 	</ul>
 </div>
 
 <br/>
+
+
