--- a/src/include/template/search.html
+++ b/src/include/template/search.html
@@ -1,5 +1,7 @@
+
+
+
 <div class="search-field">
-	<pre><input type="text" name="T3" size="16" value="（搜帖栏）">热搜词：XX  XX  XX</pre>
+	<pre><input type="text" name="T3" size="16" value="（搜帖栏）"/>热搜词：XX  XX  XX</pre>
 </div>
 
-<br/>
