编辑器的几处修改

--- a/网页样式/PostListUI.css
+++ b/网页样式/PostListUI.css
@@ -44,7 +44,7 @@ div.do-post-field {
 }
 
 .do-post-text-input-field {
-    typr:text;
+    type:text;
 	height:125px;
 	width:80%;
 	position:relative;
