恢复之前的工作；重新拆分HTML样式文件到模板

--- a/src/include/template/header_post.html
+++ b/src/include/template/header_post.html
@@ -6,10 +6,14 @@
 <title>帖子列表样式</title>
 
 
-<link rel="stylesheet" type="text/css" href="./GeneralUI.css">
-<link rel="stylesheet" type="text/css" href="./PostListUI.css">
+<link rel="stylesheet" type="text/css" href="<?php echo BBS_WEB_TEMPLATE.'/';?>GeneralUI.css">
+<link rel="stylesheet" type="text/css" href="<?php echo BBS_WEB_TEMPLATE.'/';?>PostListUI.css">
 
+<link rel="stylesheet" href="<?php echo BBS_WEB_TEMPLATE.'/';?>editor/kindeditor/themes/default/default.css" />
 
+<script charset="utf-8" src="./editor/kindeditor/kindeditor-min.js"></script>
+<script charset="utf-8" src="./editor/kindeditor/lang/zh_CN.js"></script>
+<script charset="utf-8" src="./KE.js"></script>
 </head>
 
 <body>
