添加标题键值,dispatcher留出doPost框架

--- a/src/include/template/replyPost.html
+++ b/src/include/template/replyPost.html
@@ -4,7 +4,7 @@
 <div class="do-post-field">
     <p><b class="do-post-prompt-field">发表新主题</b></p>
     <form name='doPost' method='POST' action='?'>
-	<input class="do-post-name-input-field"/>
+	<input class="do-post-name-input-field" name='title'/>
 	<br/>
 	<textarea class='do-post-text-input-field' name='content'></textarea>
 	<br/>
