--- a/src/include/template/listControl.html
+++ b/src/include/template/listControl.html
@@ -4,7 +4,7 @@
 <div class="post-list-field">
     <ul>
 	<?php
-	for ($i = 0; $i < count($post_list); $i++) {
+	for ($i = 0; $i < count($post_list) $i < 10; $i++) { // set a maximum
 	?><li class="single-list-field"><?php
 	    $post = $post_list[$i];
 	    echo $post['PostID'].': '.$post['Title'].'<br/>'.$post['PostAdd'];
