--- a/src/include/template/listControl.html
+++ b/src/include/template/listControl.html
@@ -4,7 +4,10 @@
 <div class="post-list-field">
     <ul>
 	<?php
-	for ($i = 0; $i < count($post_list) $i < 10; $i++) { // set a maximum
+	$ListSize = 10;
+	if(isset($_GET['ListSize'])) $ListSize = $_GET['ListSize'];
+	else if (isset($_POST['ListSize'])) $ListSize = $_POST['ListSize'];
+	for ($i = 0; $i < $ListSize; $i++) { // set a maximum
 	?><li class="single-list-field"><?php
 	    $post = $post_list[$i];
 	    echo $post['PostID'].': '.$post['Title'].'<br/>'.$post['PostAdd'];
@@ -13,6 +16,3 @@
 	?>
 	</ul>
 </div>
-
-<p align="center">上一页 X（当前页） 下一页 跳转至<input type="text" size="1"/>/Y页 <input type="submit" value="跳转"/> 共Y页，共Z个回复</p>
-
