--- a/src/include/template/new.html
+++ b/src/include/template/new.html
@@ -2,7 +2,7 @@
     <ul>
 	<p>测试帖子列表</p>
 	<form name='test' action='?' method='GET';>
-	    <p><input id ="num" type='text' name='num' /></p>
+	    <p><input id ="num" type='text' name='ListSize' /></p>
 	    <p><input id='action' type='hidden' name='action' value='postList' /></p>
 	    <p><input type='submit' name='submit' value='show'/></p>
 	</form>
