完成单帖浏览,能显示跟贴

--- a/src/include/template/new.html
+++ b/src/include/template/new.html
@@ -9,3 +9,14 @@
     </ul>
 </div>
 <br/>
+<div>
+    <ul>
+	<p>测试显示帖子</p>
+	<form name='showpost' action='?' method='GET';>
+	    <p><input id ="PostID" type='text' name='PostID' /></p>
+	    <p><input id='action' type='hidden' name='action' value='postView' /></p>
+	    <p><input type='submit' name='submit' value='show'/></p>
+	</form>
+    </ul>
+</div>
+<br/>
