--- a/src/include/template/viewControl.html
+++ b/src/include/template/viewControl.html
@@ -5,50 +5,98 @@
     <ul>
 	    <li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[0]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+			<?php
+			echo $post_list[0]['PostAdd'];
+			?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[1]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[1]['PostAdd'];
+		    ?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[2]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[2]['PostID'];
+		    ?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[3]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[3]['PostID'];
+		    ?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[4]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[4]['PostID'];
+		    ?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[5]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[5]['PostID'];
+		    ?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[6]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[6]['PostID'];
+		    ?>
 			</div>
 		</li>
 		<li class="single-post-field">
 		    <div class="poster-field">
+		    <?php
+		    echo $post_list[7]['PostID'];
+		    ?>
 			</div>
 			<div class="post-details-field">
+		    <?php
+		    echo $post_list[7]['PostID'];
+		    ?>
 			</div>
 		</li>
 	</ul>
