--- a/src/include/template/forum.html
+++ b/src/include/template/forum.html
@@ -3,7 +3,7 @@
 
 <div class="total-post-field">
 	
-	<p height="40">&nbsp; 交流与讨论</p>
+	<a href="?action=postList">交流与讨论</a>
 	
 	<ul>
 		<li>【装饰图案】XXXX</li>
@@ -11,9 +11,7 @@
 		<li>【装饰图案】XXXX（按主题分类）</li>
 		<br/>
 		<li>…………</li>
-		<br/>
-		<br/>
-		<br/>
+		
 	</ul>
 </div>
 <br/>
