--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <!--meta http-equiv="X-UA-Compatible" content="IE=7" />-->
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="<?php echo BBS_WEB_TEMPLATE.'/';?>GeneralUI.css">
 <?php 
-if (count($cssList)==0) array_push($cssList,'MainUI.css','PostListUI.css');
+//if (count($cssList)==0) array_push($cssList,'MainUI.css','PostListUI.css');
 foreach($cssList as $temp)
 {
 	echo '<link rel="stylesheet" type="text/css" href="'.BBS_WEB_TEMPLATE.'/'.$temp.'">'."\n";
@@ -18,6 +18,9 @@ if (count($jsList)>0)
 		echo '<script src="'.BBS_WEB_TEMPLATE.'/'.$temp.'" type="text/javascript"></script>'."\n";
 	}
 ?>
+
+<link rel="stylesheet" type="text/css" href="<?php echo BBS_WEB_TEMPLATE.'/';?>MainUI.css">
+
 </head>
 
 
@@ -42,7 +45,7 @@ if (count($jsList)>0)
 	<form name='test' action='?' method='POST' onsubmit='return matchName();'>
 	<div class='login-name-field'>
 	<img class='login-name-pic' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/username.gif'/>
-	<input id ="Name" type='text' name='Name' />
+	<input id ="Name" type='text' name='Name' maxlength='14' />
 	</div>
 	<div class='login-password-field'>
 	<img class='login-password-pic' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/password.gif'/>
@@ -69,6 +72,10 @@ if (count($jsList)>0)
 		var reg = /^(?!_)(?!.*?_$)[a-zA-Z0-9_\u4e00-\u9fa5]+$/;
 		if(!reg.test(document.getElementById("Name").value)){
 			alert("账户包含非法字符。支持中文、英文、数字、“_”");
+			return false;
+		}
+		else if(document.getElementById("Name").value.length>14){
+		    alert("用户名长度不符。请输入14位以内中文、英文、数字、“_”");
 			return false;
 		}
 		else{
