--- a/src/include/template/header_post.html
+++ b/src/include/template/header_post.html
@@ -3,7 +3,7 @@
 <head>
 <!--meta http-equiv="X-UA-Compatible" content="IE=7" />-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>帖子列表样式</title>
+<title>OPEN社团 - 帖子列表</title>
 
 
 <link rel="stylesheet" type="text/css" href="<?php echo BBS_WEB_TEMPLATE.'/';?>GeneralUI.css">
@@ -36,7 +36,7 @@
 	<form name='test' action='?' method='POST' onsubmit='return matchName();'>
 	<div class='login-name-field'>
 	<img class='login-name-pic' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/username.gif'/>
-	<input id ="Name" type='text' name='Name' />
+	<input id ="Name" type='text' name='Name' maxlength='14' />
 	</div>
 	<div class='login-password-field'>
 	<img class='login-password-pic' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/password.gif'/>
@@ -64,6 +64,10 @@
 		if(!reg.test(document.getElementById("Name").value)){
 			alert("账户包含非法字符。支持中文、英文、数字、“_”");
 			return false;
+		}
+		else if(document.getElementById("Name").value.length>14){
+		    alert("用户名长度不符。请输入14位以内中文、英文、数字、“_”");
+		    return false;
 		}
 		else{
 			return matchPassword();
