完成回帖功能
1. 为了保证提交回帖表单后继续显示当前单帖列表,在$_SESSION里添加了PostID信息;
2. 首页添加单帖测试入口,需要输入帖子ID;
3. 未登录不显示回帖编辑器;
4. FIXME: 刷新会重复提交表单内容! 导致测试时页面瞬间爆满;
5. FIXME: 所以为了测试方便,把ViewControl.html删至精华,以后再协调;
6. FIXME: SQL.php里的resetPost函数不能正常工作! FollowNum不能被刷新,返回false,导致提前return,目前暂时忽略,但FollowNum不能被更新......

--- a/src/include/template/replyPost.html
+++ b/src/include/template/replyPost.html
@@ -1,18 +1,19 @@
 
-
-
-
-<div>	
-    <p class="reply-prompt">回帖</p>
-
-	<form id="form1" name="form1" method="post" action="?">
+<?php
+if (isset($_SESSION['SysID'])) {
+?>
+<div>
+	<p class="reply-prompt">回帖</p>
+	<form id="form1" name="form1" method="POST" action="?">
 	<textarea class="reply-input-field" id="editor_1" name="content" ></textarea>
 	<br/>
-	<input id="content_1" type="hidden" runat="server" value="" />
+	<input id='action' type='hidden' name='action' value='doReply' />
 	<br/>
-    <input class="reply-submit-field" type="submit" value="发表" onclick='save();'/>
+	<input class="reply-submit-field" type="submit" value="回复" onclick='save();'/>
 	</form>
 	<br/>
 </div>
-
+<?php
+}
+?>
 
