--- a/网页样式/newOpen/stylesheet-newOpen.css
+++ b/网页样式/newOpen/stylesheet-newOpen.css
@@ -24,7 +24,7 @@
 .postList-field {
     height:1000px;
     width:900px;
-    background-color:rgb(182, 255, 0);
+    background-color:rgb(202, 171, 171);
     position:relative;
     top:10px;
     left:10px;
@@ -42,7 +42,7 @@
     height:50px;
     width:150px;
     float:left;
-    background-color:rgb(182, 255, 0);
+    background-color:rgb(202, 171, 171);
     text-align:center;
     position:relative;
     line-height:45px;
@@ -63,8 +63,6 @@
 .postList-div-post-field {
     clear:both;
     width:900px;
-    height:950px;
-
 
 }
 
@@ -79,6 +77,45 @@
     font-size:15px;
     line-height:45px;
 }
+
+
+.turn-page {
+    width:880px;
+    height:30px;
+    /*background-color:yellow;*/
+    position:relative;
+    top:20px;
+    left:10px;
+
+}
+
+.page {
+    float:left;
+    text-align:center;
+    font-size:20px;
+    position:relative;
+    top:-14px;
+    
+
+    margin:10px;
+    
+}
+
+.post-field {
+    width:880px;
+    height:290px;
+    position:absolute;
+    top:700px;
+    left:10px;
+    background-color:rgb(255, 255, 255);
+
+}
+
+
+
+
+
+
 
 
 
@@ -96,5 +133,112 @@
 }
 
 .login-field {
+    width:420px;
+    height:250px;
+    background-color:rgb(128, 128, 128);
+
+}
+
+
+.login-name-field {
+    width:300px;
+    height:45px;
+    /*background-color:white;*/
+    position:relative;
+    top:10px;
+    left:10px;
+}
+
+.login-name-pic {
+    height:45px;
+}
+
+.login-name-input {
+    height:24px;
+    width:200px;
+    position:relative;
+    top:-14px;
+}
+
+
+
+.login-password-field {
+    width:300px;
+    height:45px;
+    /*background-color:white;*/
+    position:relative;
+    top:10px;
+    left:10px;
+
+}
+
+.login-password-pic {
+    height:45px;
+}
+
+.login-password-input {
+    height:24px;
+    width:200px;
+    position:relative;
+    top:-14px;
+}
+
+
+.login-button {
+    position:absolute;
+    left:305px;
+    top:20px;
+
+    height:80px;
+}
+
+
+.register-chain {
+    font-size:18px;
+    position:relative;
+    left:320px;
+    top:10px;
+}
+
+
+.logout-button {
+
+}
+
+.chain-1 {
+    font-size:20px;
+    position:relative;
+    margin:20px;
+}
+
+.chain-2 {
+    font-size:20px;
+    position:relative;
+    margin:20px;
+}
+
+
+
+
+
+.info-field {
+    background-color:white;
+    position:absolute;
+    top:690px;
+    left:10px;
+
+    height:300px;
+    width:400px;
+}
+
+
+.info-list {
+    position:relative;
+    top:20px;
+    left:20px;
+}
+
+.info-single-list {
+    font-size:17px;
 
 }
