调整过滤发帖中HTML标签的脚本，但KE.js仍然有问题

--- a/src/include/template/addPost.html
+++ b/src/include/template/addPost.html
@@ -9,10 +9,10 @@ if (isset($_SESSION['SysID'])) {
     
 	<p><b class="do-post-prompt-field">发表新主题</b></p>
 	<form id="form1" name="form1" method="post" action="<?php echo $act;?>">
-		  <input class="do-post-name-input-field" name="title" value=""/>
+		  <input class="do-post-name-input-field" name="title" id="title" value=""/>
 		  <textarea class="do-post-text-input-field" id="editor_1" name="content" ></textarea>		  
-		  <input id="content_1" type="hidden" runat="server" value="" />
-		  <input id="doPost" type="hidden" runat="server" name='action' value="doPost"/>
+		  <input id="content_1" type="hidden"  value="" />
+		  <input id="action" type="hidden" name='action' value="doPost"/>
 		  <br/>
 		  <br/>
 	      <input class="do-post-submit-button" type="submit" value="发布" onclick='save();'/>
