--- a/src/include/template/replyPost.html
+++ b/src/include/template/replyPost.html
@@ -10,7 +10,7 @@ if (isset($_SESSION['SysID'])) {
 	<form id="form1" name="form1" method="post" action="?">
 	<textarea class="reply-input-field" id="editor_1" name="content" ></textarea>
 	<input id="content_1" type="hidden" value="" />
-	<input id="doReply" type="hidden" name="action" value="doReply"/>
+	<input id="action" type="hidden" name="action" value="doReply"/>
 	<input id="PostID" type="hidden" name="PostID" value="<?php echo $params['PostID'];/*FIXME:直接引用POST上来的数据可能会有跨站攻击的危险*/?>"/>	
 	<br/>
 	<br/>
