--- a/网页样式/newOpen/stylesheet-general.css
+++ b/网页样式/newOpen/stylesheet-general.css
@@ -34,6 +34,7 @@ img{
 a {
     display:block;
     text-decoration:none;
+    color:black;
 }
 
 
@@ -48,3 +49,9 @@ a {
 .clear {
     clear:both;
 }
+
+.heimu {
+    background-color:black;
+}
+
+
