添加返回主页的链接，隐藏调试信息

--- a/src/include/template/areaControl.html
+++ b/src/include/template/areaControl.html
@@ -2,6 +2,6 @@
 
 
 <div class="pre-index">
-    <a>主页</a>/<a>次级</a>/<a>次次级</a>
+    <a href="<?php echo BBS_WEB_ROOT.'/';?>">主页</a>/<a>次级</a>/<a>次次级</a>
 </div>
 
