--- a/src/include/template/header.html
+++ b/src/include/template/header.html
@@ -32,7 +32,7 @@ if (count($jsList)>0)
 
 
 <div class="logo-field">
-    <img class='logo-pic' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/logo.gif'/>
+    <a href="<?php echo BBS_WEB_ROOT.'/';?>"><img class='logo-pic' src='<?php echo BBS_WEB_TEMPLATE.'/';?>img/logo.gif'/></a>
 	
 </div>
 
