--- a/src/include/template/new.html
+++ b/src/include/template/new.html
@@ -1,22 +1,9 @@
 <div>
-    <ul>
-	<p>测试帖子列表</p>
-	<form name='test' action='?' method='GET';>
-	    <p><input id ="num" type='text' name='ListSize' /></p>
-	    <p><input id='action' type='hidden' name='action' value='postList' /></p>
-	    <p><input type='submit' name='submit' value='show'/></p>
-	</form>
-    </ul>
+  <form action="?" method="post" enctype="multipart/form-data">
+      <label for="file">Filename:</label>
+      <input type="file" name="file" id="file" />
+      <br />
+      <input type="hidden" name="action" id="action" value="upload" />
+      <input type="submit" name="submit" value="Submit" />
+  </form>
 </div>
-<br/>
-<div>
-    <ul>
-	<p>测试显示帖子</p>
-	<form name='showpost' action='?' method='GET';>
-	    <p><input id ="PostID" type='text' name='PostID' /></p>
-	    <p><input id='action' type='hidden' name='action' value='postView' /></p>
-	    <p><input type='submit' name='submit' value='show'/></p>
-	</form>
-    </ul>
-</div>
-<br/>
